.provarCaches/00D410000011HE0EAM/objects/rstkf__glay__c.object
<CustomObject>
    <description>glay__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glay_glacct__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstkf__glay_glyear__r.rstkf__glyear_year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_glacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>glays</relationshipLabel>
        <relationshipName>glays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_glyear__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>glays</relationshipLabel>
        <relationshipName>glays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp01cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp01dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp02cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_mp02dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p00net__c</fullName>
        <formula>rstkf__glay_mp00dr__c - rstkf__glay_mp00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p01cr__c</fullName>
        <label>Z_Obsolete_Period01 Credit</label>
        <summarizedField>rstkf__glaydiv__c.rstkf__glaydiv_p01cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydiv__c.rstkf__glaydiv_glay__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p01dr__c</fullName>
        <label>Z_Obsolete_Period01 Debit</label>
        <summarizedField>rstkf__glaydiv__c.rstkf__glaydiv_p01dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydiv__c.rstkf__glaydiv_glay__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p01net__c</fullName>
        <formula>rstkf__glay_mp01dr__c - rstkf__glay_mp01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p02cr__c</fullName>
        <label>Z_Obsolete_Period02 Credit</label>
        <summarizedField>rstkf__glaydiv__c.rstkf__glaydiv_p02cr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydiv__c.rstkf__glaydiv_glay__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p02dr__c</fullName>
        <label>Z_Obsolete_Period02 Debit</label>
        <summarizedField>rstkf__glaydiv__c.rstkf__glaydiv_p02dr__c</summarizedField>
        <summaryForeignKey>rstkf__glaydiv__c.rstkf__glaydiv_glay__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glay_p02net__c</fullName>
        <formula>rstkf__glay_mp02dr__c - rstkf__glay_mp02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glay</label>
    <listViews>
        <fullName>rstkf__RS_GLAYS</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glay_glacct__c</columns>
        <columns>rstkf__glay_glyear__c</columns>
        <columns>rstkf__glay_mp09dr__c</columns>
        <columns>rstkf__glay_mp09cr__c</columns>
        <columns>rstkf__glay_p09net__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>rstkf__glay_glacct__c</field>
            <operation>contains</operation>
            <value>1100,2232,4000,7788,1004</value>
        </filters>
        <label>GLAYS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>